--- a/BullsEye/Base.lproj/Main.storyboard
+++ b/BullsEye/Base.lproj/Main.storyboard
@@ -1,25 +1,166 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BullsEye" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="Ijq-2Z-FPR">
+                                <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KfV-bl-sEt">
+                                <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Put the Bull's Eye  as lose as you can to:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1V8-I3-XIc">
+                                        <rect key="frame" x="100" y="20" width="322" height="22"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K1K-ph-PIp">
+                                        <rect key="frame" x="424" y="21" width="21" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DYf-IN-5Ar">
+                                        <rect key="frame" x="118" y="45" width="11" height="40"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82K-5Y-yo2">
+                                        <rect key="frame" x="539" y="45" width="29" height="40"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="score:999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="woV-aw-Ej2">
+                                        <rect key="frame" x="140" y="296" width="75" height="20"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Xr-H4-wkY">
+                                        <rect key="frame" x="50" y="285" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="9l9-E7-gmk"/>
+                                            <constraint firstAttribute="width" constant="40" id="oj6-41-rzP"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" image="StartOverIcon" backgroundImage="SmallButton"/>
+                                        <connections>
+                                            <action selector="restartOver:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SID-V5-UsG"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NE6-vO-Sj1">
+                                        <rect key="frame" x="577" y="285" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="yag-J3-tuo"/>
+                                            <constraint firstAttribute="height" constant="40" id="ztw-kx-Zz1"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" image="InfoButton" backgroundImage="SmallButton"/>
+                                        <connections>
+                                            <action selector="helpAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aGg-gY-4NU"/>
+                                        </connections>
+                                    </button>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="1mV-3L-reJ">
+                                        <rect key="frame" x="132" y="50" width="404" height="31"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="400" id="bBn-qd-Jpg"/>
+                                        </constraints>
+                                    </slider>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c4y-k3-UFp">
+                                        <rect key="frame" x="284" y="120" width="100" height="37"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="87F-Ll-euh"/>
+                                            <constraint firstAttribute="height" constant="37" id="CkW-Mh-O9B"/>
+                                        </constraints>
+                                        <state key="normal" title="Hit me!" backgroundImage="Button-Normal"/>
+                                        <state key="highlighted" title="Hit me!" backgroundImage="Button-Highlighted"/>
+                                        <connections>
+                                            <action selector="hitMeAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OA2-w1-mhy"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Round:999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RQB-3h-ehF">
+                                        <rect key="frame" x="441" y="294" width="86" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="1mV-3L-reJ" firstAttribute="top" secondItem="1V8-I3-XIc" secondAttribute="bottom" constant="8" id="0Kc-jh-eqT"/>
+                                    <constraint firstItem="1V8-I3-XIc" firstAttribute="leading" secondItem="KfV-bl-sEt" secondAttribute="leading" constant="100" id="1cD-Iv-O7X"/>
+                                    <constraint firstItem="1mV-3L-reJ" firstAttribute="centerY" secondItem="DYf-IN-5Ar" secondAttribute="centerY" id="7Bl-Zl-rU3"/>
+                                    <constraint firstItem="c4y-k3-UFp" firstAttribute="top" secondItem="1mV-3L-reJ" secondAttribute="bottom" constant="40" id="8nV-t1-cMm"/>
+                                    <constraint firstItem="RQB-3h-ehF" firstAttribute="baseline" secondItem="3Xr-H4-wkY" secondAttribute="baseline" id="Add-Y9-8nx"/>
+                                    <constraint firstItem="NE6-vO-Sj1" firstAttribute="leading" secondItem="RQB-3h-ehF" secondAttribute="trailing" constant="50" id="AyA-UV-pMa"/>
+                                    <constraint firstItem="K1K-ph-PIp" firstAttribute="leading" secondItem="1V8-I3-XIc" secondAttribute="trailing" constant="2" id="DQa-mY-71r"/>
+                                    <constraint firstAttribute="bottom" secondItem="3Xr-H4-wkY" secondAttribute="bottom" constant="50" id="F6m-TU-0a3"/>
+                                    <constraint firstItem="1mV-3L-reJ" firstAttribute="leading" secondItem="DYf-IN-5Ar" secondAttribute="trailing" constant="5" id="Glv-qq-VIV"/>
+                                    <constraint firstAttribute="trailing" secondItem="NE6-vO-Sj1" secondAttribute="trailing" constant="50" id="LbF-7T-dUM"/>
+                                    <constraint firstItem="K1K-ph-PIp" firstAttribute="baseline" secondItem="1V8-I3-XIc" secondAttribute="baseline" id="MNs-Dz-Q2H"/>
+                                    <constraint firstItem="82K-5Y-yo2" firstAttribute="centerY" secondItem="DYf-IN-5Ar" secondAttribute="centerY" id="RGn-cu-nBL"/>
+                                    <constraint firstItem="c4y-k3-UFp" firstAttribute="centerX" secondItem="KfV-bl-sEt" secondAttribute="centerX" id="S4w-xg-uCl"/>
+                                    <constraint firstItem="82K-5Y-yo2" firstAttribute="leading" secondItem="1mV-3L-reJ" secondAttribute="trailing" constant="5" id="YCr-jw-SsF"/>
+                                    <constraint firstItem="3Xr-H4-wkY" firstAttribute="leading" secondItem="KfV-bl-sEt" secondAttribute="leading" constant="50" id="ZF7-oe-Rx2"/>
+                                    <constraint firstItem="1mV-3L-reJ" firstAttribute="centerX" secondItem="KfV-bl-sEt" secondAttribute="centerX" id="Zx7-03-bFk"/>
+                                    <constraint firstItem="82K-5Y-yo2" firstAttribute="baseline" secondItem="DYf-IN-5Ar" secondAttribute="baseline" id="e8l-0s-peO"/>
+                                    <constraint firstItem="NE6-vO-Sj1" firstAttribute="baseline" secondItem="3Xr-H4-wkY" secondAttribute="baseline" id="htL-J8-a6Q"/>
+                                    <constraint firstItem="woV-aw-Ej2" firstAttribute="baseline" secondItem="3Xr-H4-wkY" secondAttribute="baseline" id="mHK-am-Fwh"/>
+                                    <constraint firstItem="1V8-I3-XIc" firstAttribute="top" secondItem="KfV-bl-sEt" secondAttribute="top" constant="20" id="qoB-ZZ-jen"/>
+                                    <constraint firstItem="82K-5Y-yo2" firstAttribute="baseline" secondItem="DYf-IN-5Ar" secondAttribute="baseline" id="tUT-Xs-TKT"/>
+                                    <constraint firstItem="woV-aw-Ej2" firstAttribute="leading" secondItem="3Xr-H4-wkY" secondAttribute="trailing" constant="50" id="vfa-Nn-SQJ"/>
+                                    <constraint firstItem="1mV-3L-reJ" firstAttribute="baseline" secondItem="DYf-IN-5Ar" secondAttribute="baseline" id="yxd-Az-A2U"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Ijq-2Z-FPR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="7ra-N2-LlK"/>
+                            <constraint firstAttribute="trailing" secondItem="KfV-bl-sEt" secondAttribute="trailing" id="8k6-I2-bZN"/>
+                            <constraint firstItem="KfV-bl-sEt" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="Jzf-yj-x5k"/>
+                            <constraint firstAttribute="bottom" secondItem="Ijq-2Z-FPR" secondAttribute="bottom" id="Ooz-7I-tXv"/>
+                            <constraint firstItem="Ijq-2Z-FPR" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="bCs-vr-wcS"/>
+                            <constraint firstAttribute="trailing" secondItem="Ijq-2Z-FPR" secondAttribute="trailing" id="kH6-0D-p0a"/>
+                            <constraint firstItem="KfV-bl-sEt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="kOw-g4-PIO"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="KfV-bl-sEt" secondAttribute="bottom" id="m1R-7O-rxp"/>
+                        </constraints>
                     </view>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="roundLabel" destination="RQB-3h-ehF" id="Flj-7j-Cyp"/>
+                        <outlet property="scoreLabel" destination="woV-aw-Ej2" id="JiU-Ig-6nh"/>
+                        <outlet property="targetValueLabel" destination="K1K-ph-PIp" id="i5g-In-dYK"/>
+                        <outlet property="valueSlider" destination="1mV-3L-reJ" id="E29-Ik-0mn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="231.5" y="208.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Background" width="480" height="320"/>
+        <image name="Button-Highlighted" width="100" height="37"/>
+        <image name="Button-Normal" width="100" height="37"/>
+        <image name="InfoButton" width="10" height="22"/>
+        <image name="SmallButton" width="32" height="32"/>
+        <image name="StartOverIcon" width="20" height="20"/>
+    </resources>
 </document>
